# DLCV-hw3

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
analysis/: bbox_stats.py  explore_data.py  visualize_gt.py  visualize_pred.py
analysis/output/: bbox_stats.json  dataset_stats.json
docs/: 2026-05-10-image-size-and-gt-threshold-rationale.md  oom-fix.md
docs/encode_mask_to_RLE/: example.ipynb  test-results.json  utils.py
docs/encode_mask_to_RLE/sample-image/: class1.tif  class2.tif
docs/superpowers/plans/: 2026-05-06-instance-segmentation.md  2026-05-07-nms-evalfix.md  2026-05-10-augmentation-and-resolution.md
docs/superpowers/specs/: 2026-05-06-instance-segmentation-design.md  2026-05-10-augmentation-and-resolution-design.md  2026-05-10-augmentation-resolution-results.md  2026-05-11-cbam-experiment.md  2026-05-11-threshold500-experiment.md
report/: package.json
report/scripts/: gen_charts.py  pdf.ts
report/src/: index.html
src/: augment.py  dataset.py  inference.py  model.py  train.py  utils.py
tests/: test_augment.py  test_dataset.py  test_inference.py  test_model.py  test_utils.py
