[project]
name = "DLCV-hw3"
version = "0.1.0"
description = ""
authors = [
    {name = "timsu92",email = "33785401+timsu92@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies= [
    "imagecodecs>=2025.3.30",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pycocotools>=2.0.11",
    "scikit-image>=0.25.2",
    "torch>=2.9.0",
    "torchvision>=0.20.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "python-pptx>=1.0.2",
    "ruff>=0.15.12",
]

